--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "devDependencies": {
     "pbf": "^1.3.5",
     "standard": "^12.0.1",
+    "standard-version": "^6.0.1",
     "tape": "^4.10.2",
     "vector-tile": "^1.2.0"
   },
   "scripts": {
     "pretest": "standard index.js test.js",
     "test": "tape test.js",
+    "release": "standard-version",
     "bench": "node bench/bench.js > bench/results.txt && node bench/big.js >> bench/results.txt"
   },
   "repository": {
