--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "static-filter",
+  "name": "compile-filter",
   "version": "1.0.0",
   "main": "./index.js",
-  "description": "Creates filtering function for GeoJSON features",
+  "description": "Compiles a filter from a filter expression, for array filtering",
   "dependencies": {},
   "devDependencies": {
     "pbf": "^1.3.5",
@@ -19,17 +19,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/gmaclennan/static-filter.git"
+    "url": "git+ssh://git@github.com/gmaclennan/compile-filter.git"
   },
   "bugs": {
-    "url": "https://github.com/gmaclennan/static-filter/issues"
+    "url": "https://github.com/gmaclennan/compile-filter/issues"
   },
-  "homepage": "https://github.com/gmaclennan/static-filter#readme",
+  "homepage": "https://github.com/gmaclennan/compile-filter#readme",
   "author": "Gregor MacLennan",
   "license": "MIT",
   "keywords": [
     "filter",
     "array",
-    "static"
+    "static",
+    "compile"
   ]
 }
