--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "description": "Compiles a filter from a filter expression, for array filtering",
   "dependencies": {},
   "devDependencies": {
-    "pbf": "^1.3.5",
     "standard": "^12.0.1",
     "standard-version": "^6.0.1",
-    "tape": "^4.10.2",
-    "vector-tile": "^1.2.0"
+    "tape": "^4.10.2"
   },
   "scripts": {
     "pretest": "standard index.js test.js",
